--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "name": "demo-graphql",
+  "name": "graphqlApiNodeDemo",
   "version": "1.0.0",
-  "description": "Very tiny application for showing the power of graphQL",
+  "description": "",
   "scripts": {
-    "lint": "tslint --project tsconfig.json",
-    "build": "tsc",
     "start": "npm run init-db && ./node_modules/nodemon/bin/nodemon.js server.js",
     "sequelize-skeleton": "./node_modules/sequelize-cli/lib/sequelize init:models; ./node_modules/sequelize-cli/lib/sequelize init:config",
     "init-db": "cd /opt/lampp/bin/ && echo 'DROP DATABASE IF EXISTS rest_api_node_demo; CREATE DATABASE rest_api_node_demo CHARACTER SET utf8 COLLATE utf8_general_ci' | ./mysql -u root && cd -"
@@ -12,17 +10,18 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "graphql-server-express": "^1.4.0",
     "mysql2": "^1.5.3",
-    "nodemon": "^1.18.3",
-    "sequelize": "^4.38.0",
-    "sequelize-cli": "^4.0.0"
+    "sequelize": "^4.38.0"
   },
   "private": true,
   "keywords": [],
-  "author": "infocentric",
+  "author": "Infocentric Research AG, Baden, Switzerland",
   "license": "ISC",
   "devDependencies": {
     "faker": "^4.1.0",
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "nodemon": "^1.18.3",
+    "sequelize-cli": "^4.0.0"
   }
 }
