Reduce amont of imported libraries.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
     "faker": "^4.1.0",
-    "lodash": "^4.17.10",
+    "lodash.random": "^3.2.0",
+    "lodash.times": "^4.3.2",
     "nodemon": "^1.18.3",
     "sequelize-cli": "^4.0.0",
     "webpack": "^4.16.5",
